feat: ✨ click windows to bring them to top :3

--- a/src/views/partials/byf.html
+++ b/src/views/partials/byf.html
@@ -1,9 +1,13 @@
 <link rel="stylesheet" href="/styles/byf.css" />
 <div class="byf">
-  <h3>things to know before you follow</h3>
-  <p>notifs are off for non-mutuals, i get easily overwhelmed by notifs sorry T__T</p>
-  <p>i softblock to unfollow and it's almost never personal, feel free to re-follow if i softblock</p>
-  <p>speaking of softblocking, if i do softblock it's almost always because you frequently qrt bad takes to dunk on them or are involved in a lot of discourse</p>
-  <p>i'm very shy and don't know how to respond to replies a lot of the time but i'll always like replies i see to say haiiiii :3</p>
-  <p>i sillypost a lot and i understand if it gets annoying</p>
+  <div class="byf-container">
+    <div class="byf-header">
+      <h3>things to know before you follow</h3>
+    </div>
+    <p>notifs are off for non-mutuals, i get easily overwhelmed by notifs sorry T__T</p>
+    <p>i softblock to unfollow and it's almost never personal, feel free to re-follow if i softblock</p>
+    <p>speaking of softblocking, if i do softblock it's almost always because you frequently qrt bad takes to dunk on them or are involved in a lot of discourse</p>
+    <p>i'm very shy and don't know how to respond to replies a lot of the time but i'll always like replies i see to say haiiiii :3</p>
+    <p>i sillypost a lot and i understand if it gets annoying</p>
+  </div>
 </div>
