--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -54,7 +54,7 @@ html, body {
 }
 
 .app-header {
-  flex-basis: 5%;
+  flex-basis: 30px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
