feat: ✨ pushing this

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -62,7 +62,7 @@
                     </div>
                   </div>
                   <div class="dashboard-start-tooltip-container">
-                    <div class="dashboard-start-tooltip-parent">
+                    <div class="dashboard-start-tooltip-parent" onclick="location.reload()">
                       <i class="ti ti-reload"></i>
                     </div>
                     <div class="dashboard-start-tooltip">
@@ -70,7 +70,7 @@
                     </div>
                   </div>
                   <div class="dashboard-start-tooltip-container">
-                    <div class="dashboard-start-tooltip-parent">
+                    <div class="dashboard-start-tooltip-parent" onclick="window.location.href='https://hellogirls.info'">
                       <i class="ti ti-logout"></i>
                     </div>
                     <div class="dashboard-start-tooltip">
