feat: ✨ i s2g if my power goes out...

--- a/src/views/partials/desktop/index.html
+++ b/src/views/partials/desktop/index.html
@@ -98,7 +98,7 @@
         </div>
         </div>
         <div id="dashboard-start-button">
-        start
+            <i class="fa-brands fa-windows"></i> start
         </div>
     </div>
     <div class="dashboard-divider"></div>
