--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -48,7 +48,6 @@ a:link, a:visited {
     width: 90%;
     height: 90%;
     overflow: clip;
-    background: red;
     color: #fff;
     border-radius: 20%;
 }
@@ -80,11 +79,11 @@ a:link, a:visited {
     background-image: linear-gradient(#ff3593, #ff5c92);
 }
 
-#chat .app-icon-inner {
+#chat_box .app-icon-inner {
     background-image: linear-gradient(#ff3550, #ff5c5c);
 }
 
-#notes .app-icon-inner {
+#music .app-icon-inner {
     background-image: linear-gradient(#ffae35, #ffcb5c);
 }
 
@@ -92,7 +91,7 @@ a:link, a:visited {
     position: relative;
     display: flex;
     align-items: flex-end;
-    padding: 3%;
+    padding: 5%;
     background-image: linear-gradient(#fff, #fff8fa);
     overflow: clip;
 }
@@ -245,4 +244,42 @@ a:link, a:visited {
 
 .app-shortcut-icon#coffee {
     background-image: linear-gradient(#ffb71d, #ffd519);
+}
+
+.app-window {
+    z-index: 5;
+    display: flex;
+    flex-flow: column nowrap;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+}
+
+.app-window-header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    flex-basis: 3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-shadow: 0px 0px 3px #050020a6;
+    font-size: 1.3rem;
+    padding: 1%;
+    background-image: linear-gradient(#09003a0a, transparent);
+    z-index: 10;
+}
+
+.app-window-header .app-window-back {
+    font-size: 2rem;
+}
+
+.app-window-header .app-window-title {
+    width: 100%;
+    text-align: center;
+}
+
+.app-window-content {
+    flex-grow: 1;
 }
