--- a/src/styles/chat_box_mobile.css
+++ b/src/styles/chat_box_mobile.css
@@ -1,12 +1,11 @@
 .chatbox {
+  position: relative;
   height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
+  max-height: 100vh;
 }
 
 .chatbox-msg-container {
-  flex-grow: 1;
-  flex-basis: 90%;
+  height: 90%;
   max-height: 90%;
   padding: 15% 2% 2% 2%;
   overflow-y: scroll;
@@ -18,40 +17,19 @@
 
 .chatbox-msg {
   position: relative;
-  display: flex;
   align-items: center;
   width: 100%;
   padding: 1%;
   gap: 3%;
   margin: 4% 0%;
 }
-
-.chatbox-msg-stuff {
-  width: 100%;
-}
-
-.chatbox-msg .chatbox-msg-avatar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-basis: 40px;
-  flex-shrink: 0;
-  font-size: 1.5rem;
-  width: 40px;
-  height: 40px;
-  background-color: #ff60a2;
-  color: #fff;
-  padding: 5px;
-  border-radius: 50%;
-}
-
 .chatbox-msg .chatbox-msg-name {
   position: absolute;
   z-index: 3;
   top: -8%;
-  left: 18%;
+  left: 2%;
   display: inline-block;
-  background-color: #5fa4ff;
+  background-color: #fd6799;
   color: #fff;
   padding: 1% 6%;
   border-radius: 10px;
@@ -68,27 +46,19 @@
   width: 100%;
 }
 
-.chatbox-msg .chatbox-msg-content::after {
-  content: "";
-  position: absolute;
-  top: 40%;
-  left: -10px;
-  width: 0;
-  height: 0;
-  border: 10px solid transparent;
-  border-right-color: #fff;
-  border-left: 0;
-}
-
 .chatbox-msg-timestamp {
   font-size: 0.7rem;
   color: #4c4d8f;
 }
 
 .chatbox-form-container {
-  flex-basis: 20%;
-  padding: 2%;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 20%;
+  padding: 2% 2% 5% 2%;
   background-color: #688bff;
+  z-index: 6;
 }
 
 .chatbox-form-msg-section {
