--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -244,12 +244,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 6%;
   height: 100%;
   width: 5vw;
   cursor: pointer;
   user-select: none;
   transition: background-color 0.1s;
   text-align: center;
+}
+
+#dashboard-start-button i {
+  font-size: 1.3rem;
 }
 
 #dashboard-start-button:hover {
