--- a/src/styles/chat_box_mobile.css
+++ b/src/styles/chat_box_mobile.css
@@ -7,7 +7,7 @@
 .chatbox-msg-container {
   height: 90%;
   max-height: 90%;
-  padding: 15% 2% 2% 2%;
+  padding: 15% 2%;
   overflow-y: scroll;
   background-image: url("/static/images/cinnamoroll-chat.jpg");
   background-size: cover;
