--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -7,7 +7,8 @@ a:link, a:visited {
 
 #app-screen {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     background-image: url("/static/images/cowboy_wallpaper.png");
     background-repeat: no-repeat;
     background-position: center center;
