--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -252,7 +252,8 @@ a:link, a:visited {
     display: flex;
     flex-flow: column nowrap;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     background: #fff;
 }
 
