feat: ✨ music player is working well enough... i think

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,5 +16,6 @@
   <body>
     <div id="container">
     </div>
+    <audio id="music-player-audio" src="" preload=”metadata”></audio>
   </body>
 </html>
