--- a/src/styles/music_player_mobile.css
+++ b/src/styles/music_player_mobile.css
@@ -3,6 +3,9 @@
   height: 100%;
   max-height: 100vh;
   max-height: calc(var(--vh, 1vh) * 100);
+  color: #fff;
+  background-image: linear-gradient(to right top, #292e67, #2d275b, #2f214f, #2e1b44, #2c1639, #291634, #25152f, #22152a, #1f1727, #1d1924, #1c1b20, #1c1c1c);
+  padding-top: 15%;
 }
 
 i {
@@ -10,14 +13,26 @@ i {
 }
 
 .visualizer {
-  width: 100%;
+  width: 95%;
   height: 40%;
-  background-color: #222;
-  padding: 15% 1% 1% 1%;
+  margin: auto;
+  padding: 2%;
+  border-radius: 10px;
+}
+
+.visualizer-canvas {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
 }
 
 .music-player-controls {
   padding: 0% 3% 2% 3%;
+  width: 95%;
+  margin: auto;
+  border-radius: 20px;
+  background-color: #00000066;
+  box-shadow: 1px 1px 2px #000;
 }
 
 .music-player-top-controls {
@@ -45,6 +60,18 @@ i {
   border-radius: 10px;
 }
 
+.music-player-seeker-range::-webkit-slider-runnable-track {
+  height: 15%;
+  background-color: #ff8bb2;
+  border-radius: 10px;
+}
+
+.music-player-seeker-range::-moz-range-track {
+  height: 15%;
+  background-color: #ff8bb2;
+  border-radius: 10px;
+}
+
 .music-player-seeker-time {
   width: 100%;
   display: flex;
@@ -58,4 +85,53 @@ i {
   align-items: center;
   justify-content: center;
   gap: 10%;
+  color: #ff9fbf;
+}
+
+.music-player-play {
+  background-color: #ff9fbf;
+  color: #000;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 1.1rem;
+  transition: transform 0.1s;
+  box-shadow: 0 0 2px #ff7bb2;
+}
+
+.music-player-play:active {
+  transform: scale(1.2);
+}
+
+.track-list {
+  padding: 3%;
+}
+
+.track-list-title {
+  font-size: 1.4rem;
+  opacity: 0.5;
+  font-weight: 600;
+}
+
+.track-list-container {
+  padding: 3%;
+  padding-top: 0;
+  overflow-x: clip;
+  overflow-y: auto;
+  margin-top: -2%;
+}
+
+.music-track {
+  padding: 3% 1%;
+  margin: 2% 0%;
+  transition: color 0.2s;
+}
+
+.music-track.active {
+  color: #ff9fbf;
+}
+
+.music-track.active::after {
+  content: "playing...";
+  margin-left: 10%;
+  font-size: 0.7rem;
 }
