--- a/src/views/partials/desktop/music.html
+++ b/src/views/partials/desktop/music.html
@@ -3,28 +3,30 @@
   <div class="visualizer">
     <canvas class="visualizer-canvas"></canvas>
   </div>
-  <div class="music-player-controls">
-    <div class="music-player-top-controls">
-      <div class="music-player-seeker">
-        <input type="range" class="music-player-seeker-range" max="100" value="0"/>
-        <div class="music-player-seeker-time">
-          <div class="music-player-seeker-current-time">0:00</div>
-          <div class="music-player-seeker-duration">0:00</div>
+  <div class="music-player-sidebar">
+    <div class="music-player-controls">
+      <div class="music-player-top-controls">
+        <div class="music-player-seeker">
+          <input type="range" class="music-player-seeker-range" max="100" value="0"/>
+          <div class="music-player-seeker-time">
+            <div class="music-player-seeker-current-time">0:00</div>
+            <div class="music-player-seeker-duration">0:00</div>
+          </div>
         </div>
       </div>
+      <div class="music-player-bottom-controls">
+        <div class="music-player-rewind"><i class="ti ti-player-skip-back-filled"></i></div>
+        <div class="music-player-play"><i class="ti" id="play-pause-button-icon"></i></div>
+        <div class="music-player-forward"><i class="ti ti-player-skip-forward-filled"></i></div>
+      </div>
     </div>
-    <div class="music-player-bottom-controls">
-      <div class="music-player-rewind"><i class="ti ti-player-skip-back-filled"></i></div>
-      <div class="music-player-play"><i class="ti" id="play-pause-button-icon"></i></div>
-      <div class="music-player-forward"><i class="ti ti-player-skip-forward-filled"></i></div>
-    </div>
-  </div>
-  <div class="track-list">
-    <div class="track-list-title">track list</div>
-    <div class="track-list-container">
-      <template id="music-track-template">
-        <div class="music-track"></div>
-      </template>
+    <div class="track-list">
+      <div class="track-list-title">track list</div>
+      <div class="track-list-container">
+        <template id="music-track-template">
+          <div class="music-track"></div>
+        </template>
+      </div>
     </div>
   </div>
 </div>
