--- a/src/views/partials/desktop/index.html
+++ b/src/views/partials/desktop/index.html
@@ -95,6 +95,8 @@
             <div class="dashboard-start-item" id="start-chat_box">chat box</div>
             <div class="dashboard-start-label">M</div>
             <div class="dashboard-start-item" id="start-music">music</div>
+            <div class="dashboard-start-label">P</div>
+            <div class="dashboard-start-item" id="start-projects">projects</div>
             <div class="dashboard-start-label">S</div>
             <div class="dashboard-start-item" id="start-sticky_note">sticky note</div>
             </div>
