--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>about son!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/styles/index.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
     <script defer src="/scripts/index.js"></script>
