refactor: :bug: updated my name and pronouns

--- a/src/views/partials/desktop/about.html
+++ b/src/views/partials/desktop/about.html
@@ -10,10 +10,10 @@
           <span class="abt-basic-info-label">name:</span> son
         </div>
         <div class="about-basic-info">
-          <span class="abt-basic-info-label">age:</span> 20+
+          <span class="abt-basic-info-label">age:</span> 25+
         </div>
         <div class="about-basic-info">
-          <span class="abt-basic-info-label">pronouns:</span> she/he/they
+          <span class="abt-basic-info-label">pronouns:</span> she/he
         </div>
       </div>
       
